@@ -7,3 +7,4 @@ t/03podcoverage.t
 t/07podspelling.t
 t/10test_script.t
 t/boilerplate.pm
+t/exceptions.dd
