@@ -1,0 +1,5 @@
+do { my $x = {
+       'cpantest.antelope.net' => '0a2fcf86-8a1d-11e5-ae6c-05e5e19420dd'
+     };
+  $x;
+ }
